@@ -992,6 +992,127 @@ MPI_Info_delete( MPI_Info info, SCOREP_MPI_CONST_DECL char* key )
 #endif
 #endif
 
+#if HAVE( MPI_2_0_SYMBOL_PMPI_INFO_GET_NKEYS ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Info_get_nkeys )
+/**
+ * Declaration of PMPI-symbol for MPI_Info_get_nkeys
+ */
+int
+PMPI_Info_get_nkeys( MPI_Info info,
+                     int*     nkeys );
+
+/**
+ * Measurement wrapper for MPI_Info_get_nkeys
+ * @note Auto-generated by wrapgen from template: SCOREP_Mpi_Std.w
+ * @note C interface
+ * @note Introduced with MPI-2.0
+ * @ingroup misc
+ * Triggers an enter and exit event.
+ * It wraps the MPI_Info_get_nkeys call with enter and exit events.
+ */
+int
+MPI_Info_get_nkeys( MPI_Info info, int* nkeys )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+    const int event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
+    const int event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR( SCOREP_MPI_ENABLED_MISC );
+    int       return_val;
+
+    if ( event_gen_active )
+    {
+        SCOREP_MPI_EVENT_GEN_OFF();
+        if ( event_gen_active_for_group )
+        {
+            SCOREP_EnterWrappedRegion( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_INFO_GET_NKEYS ] );
+        }
+        else if ( SCOREP_IsUnwindingEnabled() )
+        {
+            SCOREP_EnterWrapper( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_INFO_GET_NKEYS ] );
+        }
+    }
+
+    SCOREP_ENTER_WRAPPED_REGION();
+    return_val = PMPI_Info_get_nkeys( info, nkeys );
+    SCOREP_EXIT_WRAPPED_REGION();
+
+    if ( event_gen_active )
+    {
+        if ( event_gen_active_for_group )
+        {
+            SCOREP_ExitRegion( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_INFO_GET_NKEYS ] );
+        }
+        else if ( SCOREP_IsUnwindingEnabled() )
+        {
+            SCOREP_ExitWrapper( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_INFO_GET_NKEYS ] );
+        }
+        SCOREP_MPI_EVENT_GEN_ON();
+    }
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+    return return_val;
+}
+#endif
+
+#if HAVE( MPI_2_0_SYMBOL_PMPI_INFO_GET_NTHKEY ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Info_get_nthkey )
+/**
+ * Declaration of PMPI-symbol for MPI_Info_get_nthkey
+ */
+int
+PMPI_Info_get_nthkey( MPI_Info info,
+                      int      n,
+                      char*    key );
+
+/**
+ * Measurement wrapper for MPI_Info_get_nthkey
+ * @note Auto-generated by wrapgen from template: SCOREP_Mpi_Std.w
+ * @note C interface
+ * @note Introduced with MPI-2.0
+ * @ingroup misc
+ * Triggers an enter and exit event.
+ * It wraps the MPI_Info_get_nthkey call with enter and exit events.
+ */
+int
+MPI_Info_get_nthkey( MPI_Info info, int n, char* key )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+    const int event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
+    const int event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR( SCOREP_MPI_ENABLED_MISC );
+    int       return_val;
+
+    if ( event_gen_active )
+    {
+        SCOREP_MPI_EVENT_GEN_OFF();
+        if ( event_gen_active_for_group )
+        {
+            SCOREP_EnterWrappedRegion( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_INFO_GET_NTHKEY ] );
+        }
+        else if ( SCOREP_IsUnwindingEnabled() )
+        {
+            SCOREP_EnterWrapper( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_INFO_GET_NTHKEY ] );
+        }
+    }
+
+    SCOREP_ENTER_WRAPPED_REGION();
+    return_val = PMPI_Info_get_nthkey( info, n, key );
+    SCOREP_EXIT_WRAPPED_REGION();
+
+    if ( event_gen_active )
+    {
+        if ( event_gen_active_for_group )
+        {
+            SCOREP_ExitRegion( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_INFO_GET_NTHKEY ] );
+        }
+        else if ( SCOREP_IsUnwindingEnabled() )
+        {
+            SCOREP_ExitWrapper( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_INFO_GET_NTHKEY ] );
+        }
+        SCOREP_MPI_EVENT_GEN_ON();
+    }
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+    return return_val;
+}
+#endif
+
 
 #if HAVE( MPI_INFO_GET_COMPLIANT )
 #if HAVE( MPI_2_0_SYMBOL_PMPI_INFO_GET ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Info_get )
