@@ -225,6 +225,10 @@ MPI_Free_mem( void* base )
 
 #pragma wrapgen single MPI_Info_delete skel/SCOREP_Mpi_StdCompl.w
 
+#pragma wrapgen single MPI_Info_get_nkeys skel/SCOREP_Mpi_Std.w
+
+#pragma wrapgen single MPI_Info_get_nthkey skel/SCOREP_Mpi_Std.w
+
 #pragma wrapgen single MPI_Info_get skel/SCOREP_Mpi_StdCompl.w
 
 #pragma wrapgen single MPI_Info_get_string skel/SCOREP_Mpi_Std.w
